--- a/.classpath
+++ b/.classpath
@@ -6,8 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/danas/git/ElectronicStudentCard/lib/jackson-core-2.2.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danas/git/ElectronicStudentCard/lib/jackson-databind-2.2.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danas/git/ElectronicStudentCard/lib/jackson-annotations-2.2.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jackson"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
